GNOME Bugzilla – Bug 772640
Networkmanager 1.4.0 doesn't automatically active connections marked with "Automatically connect"
Last modified: 2017-10-23 18:13:17 UTC
Networkmanager 1.4.x doesn't automatically activate connections marked with "Automatically connect" when the option "Available to all users" is deactivated. I tested the versions 1.4.0 and 1.4.2. Workaround: * Enabe the option "Available to all users", which solves the problem for 1.4.x * downgrade networkmanager to 1.0.12, which solves the problem
(In reply to Herbert Wantesh from comment #0) > Networkmanager 1.4.x doesn't automatically activate connections marked with > "Automatically connect" when the option "Available to all users" is > deactivated. > I tested the versions 1.4.0 and 1.4.2. > > Workaround: > * Enabe the option "Available to all users", which solves the problem for > 1.4.x > * downgrade networkmanager to 1.0.12, which solves the problem Hi, I'm unable to reproduce this; can you please set 'level=TRACE' in the [logging] section of /etc/NetworkManager/NetworkManager.conf, reboot the system and attach NM logs ('journalctl -u NetworkManager -b' if you use journald or otherwise from syslog)? Thanks!
Created attachment 337338 [details] Automatically connect disabled
Created attachment 337339 [details] "Available to all users" disabled
Created attachment 337340 [details] "Available to all users" enabled
Which distro are you using? Or, if you compiled NM from git, which session tracking method are you using? ./configure --with-session-tracking=systemd|consolekit|no When the connection is bound to a specific user, we automatically enable it only if an active session for that user exists. Apparently this worked the same on 1.0.12 but with one exception: when session-tracking is disabled, on 1.0.12 we always auto-activated the connection (as long as the specified user existed in the system), while on 1.4 we don't anymore.
(In reply to Beniamino Galvani from comment #5) > Which distro are you using? Or, if you compiled NM from git, which > session tracking method are you using? > > ./configure --with-session-tracking=systemd|consolekit|no > > When the connection is bound to a specific user, we automatically > enable it only if an active session for that user exists. Apparently > this worked the same on 1.0.12 but with one exception: when > session-tracking is disabled, on 1.0.12 we always auto-activated > the connection (as long as the specified user existed in the system), > while on 1.4 we don't anymore. i use gentoo. It is compiled with --with-session-tracking=consolekit and an active session exists for this user
btw 1.0.12 was also compiled with --with-session-tracking=consolekit
Created attachment 337513 [details] [review] [PATCH 1/2] session-monitor: use logging macros
Created attachment 337514 [details] [review] [PATCH 2/2] session-monitor: fix parsing of ConsoleKit database
Hi Herbert, the two patches attached (actually only the second) should fix the issue, can you try them?
patches lgtm
thanks for the patches :) - i only applied patch (In reply to Beniamino Galvani from comment #9) > Created attachment 337514 [details] [review] [review] > [PATCH 2/2] session-monitor: fix parsing of ConsoleKit database thanks for the patches :) - i only applied the "[PATCH 2/2] session-monitor: fix parsing of ConsoleKit database" patch everythings works again. thanks for the quick fix :)
seems something is missing, as i have to restart networkmanager after every reboot to get it working. without a restart autoconnect doesnt work
it seems consoleit wasn't up for whatever reasen, after starting it, nm works even after a reboot. so the patch is correct
Patches applied to master, nm-1-4 and nm-1-2. https://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=0e7f834a6f3dd08eeabcc8bdf3d2e49bf70f2360 https://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=db9589f0ceb099d49439acf257f9ef449aec2c27