session-monitor: fix parsing of ConsoleKit database

The section name is "Session", not "CkSession".  Restore the correct
value, changed by commit 0de60b300ed6 ("session: merge
nm-session-monitor-* modules").

Fixes: 0de60b300ed6cc0fc94c742396112b1274989371

https://bugzilla.gnome.org/show_bug.cgi?id=772640
(cherry picked from commit db9589f0ceb099d49439acf257f9ef449aec2c27)